fix: Realigned and linked social icons of footer

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -61,3 +61,9 @@
   margin-bottom:0;
     opacity:0.8;
 }
+
+.social .icon {
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+}
